--- a/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
+++ b/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
+    <ProjectReference Include="..\..\eShop.UseCases\eShop.UseCases.csproj" />
+    <ProjectReference Include="..\eShop.Web.Common\eShop.Web.Common.csproj" />
+  </ItemGroup>
+
 </Project>
