--- a/eShop/eShop.Web.Modules/eShop.Web.Common/eShop.Web.Common.csproj
+++ b/eShop/eShop.Web.Modules/eShop.Web.Common/eShop.Web.Common.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Controls\" />
+  </ItemGroup>
+
 </Project>
