Added authentication and authorization

--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
     <ProjectReference Include="..\..\eShop.UseCases\eShop.UseCases.csproj" />
+    <ProjectReference Include="..\eShop.Web.Common\eShop.Web.Common.csproj" />
   </ItemGroup>
 
 </Project>
