--- a/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
+++ b/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
   </ItemGroup>
 
