--- a/eShop/eShop.Web/appsettings.Development.json
+++ b/eShop/eShop.Web/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Data Source=DESKTOP-4GHEKI8\\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
